# bot_car_number

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.arm.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yml
.github/workflows/: main.yml
app/: __main__.py  config.py
app/dao/: auto.py  base.py  registration.py  stats.py  user.py
app/db/: dao.py  database.py  models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 6cfbed9515c2_init.py  80a36df600e4_init.py  be7b380aa6b7_stat.py
app/handlers/: auto.py  auto_commands.py  main_commands.py  menu.py  search.py  search_commands.py  states.py  user.py  user_commands.py
app/keyboards/: inline_keyboard.py  reply_keyboard.py
app/middlewares/: access.py  database.py  db_session.py
app/migrations/: env.py
app/migrations/versions/: 29e3c65d669c_init.py  689e150eab14_init.py  759bce6618ec_init.py  a0e45fa01004_init.py  e05f00c251ad_init.py  e7a6c137836f_init.py  fd95f1f848c2_init.py
app/misc/: cmd.py  msg.py  ui_commands.py
app/services/: auto_service.py  auto_services.py  msg.py  query.py  search_sevrice.py  services.py  stats_service.py  ui_commands.py  user_service.py  user_services.py  utils.py  validators.py
app/utils/: cmd.py  msg.py  ui_commands.py  validators.py
src/bot_car_number/: __main__.py  config.py  config_loader.py
src/bot_car_number/adapters/db/: models.py
src/bot_car_number/adapters/postgres/: config.py  main.py  tables.py
src/bot_car_number/adapters/redis/: config.py
src/bot_car_number/application/: config.py  exceptions.py  user_gateway.py
src/bot_car_number/application/dto/: auto.py  search.py  stats.py  user.py
src/bot_car_number/application/gateways/: auto.py  auto_gateway.py  registration.py  registration_gateway.py  search.py  stats.py  stats_gateway.py  user.py
src/bot_car_number/application/interfaces/: auto.py  registration.py
src/bot_car_number/application/use_case/: add_auto.py  add_auto_model.py  add_auto_number.py  add_registration_count.py  add_search_attempt.py  add_user.py  block_user.py  check_add_auto.py  check_search_access.py  check_user_access.py  create_auto.py  create_search_try.py  create_user.py  delete_auto.py  delete_user.py  (+9 more)
src/bot_car_number/dao/: auto.py  base.py  registration.py  stats.py  user.py
src/bot_car_number/db/: models.py
src/bot_car_number/di/: middleware_inject.py  providers.py
src/bot_car_number/domain/: exceptions.py  value_objects.py
src/bot_car_number/entities/: auto.py  stats.py  user.py
src/bot_car_number/handlers/: auto.py  menu.py  search.py  states.py  user.py
src/bot_car_number/keyboards/: inline_keyboard.py  reply_keyboard.py
src/bot_car_number/middlewares/: access.py  db_session.py
src/bot_car_number/misc/: msg.py  ui_commands.py
src/bot_car_number/presentation/: config.py  states.py
src/bot_car_number/services/: auto_service.py  stats_service.py  user_service.py
src/bot_car_number/value_objects/: auto_model.py  auto_number.py
(+40 files in other folders)
