[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bot_car_number"
version = "1.0.0"
description = "Telegram bot for car number search"
authors = [{ name = "Andrey Pronyaev", email = "abpronyaev@gmail.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.10.0",
    "alembic==1.13.2",
    "psycopg[binary]==3.2.1",
    "redis==5.0.7",
    "SQLAlchemy==2.0.31",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx"]
lint = ["black", "ruff"]

[tool.black]
line-length = 79
target-version = ["py39"]

[tool.ruff]
src = ["src"]
exclude = ["__pycache__", ".git", ".venv*", "migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]
fixable = ["I", "F401"]
ignore = ["UP035", "UP006", "N813"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
norecursedirs = [".git", ".venv*"]
addopts = ["-vv", "-p no:cacheprovider", "-p no:warnings"]
python_files = ["test_*.py"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/andprov/bot_car_number"
Issues = "https://github.com/andprov/bot_car_number/issues"
