[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bot_car_number"
version = "3.1.0"
description = "Telegram bot for car number search"
authors = [{ name = "Andrey Pronyaev", email = "abpronyaev@gmail.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.22.0",
    "alembic==1.16.5",
    "dishka==1.6.0",
    "psycopg[binary]==3.2.9",
    "redis==6.4.0",
    "sqlalchemy==2.0.43",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.10",
]

[tool.black]
line-length = 79
target-version = ["py39"]

[tool.ruff]
src = ["src"]
exclude = ["__pycache__", ".git", ".venv*", "migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]
fixable = ["I", "F401"]
ignore = ["UP035", "UP006", "N813"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
norecursedirs = [".git", ".venv*"]
addopts = ["-vv", "-p no:cacheprovider", "-p no:warnings"]
python_files = ["test_*.py"]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/andprov/bot_car_number"
Issues = "https://github.com/andprov/bot_car_number/issues"
